--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body {
     background: rgb(255, 153, 0);
   }
+
+  div#info {
+    color: black;
+    background-color: beige;
+    border: 2px solid gainsboro;
+    padding: 10px; 
+    display: none;
+  }
+
+  input{
+    margin-left: 60px;
+  }
